All issue fixed

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.28.0'
-DFX_NETWORK='local'
-CANISTER_ID_SOCIAL_T7_FRONTEND='ufxgi-4p777-77774-qaadq-cai'
-CANISTER_ID_SOCIAL_T7_BACKEND='ucwa4-rx777-77774-qaada-cai'
-CANISTER_ID_INTERNET_IDENTITY='ulvla-h7777-77774-qaacq-cai'
-CANISTER_ID='ulvla-h7777-77774-qaacq-cai'
-CANISTER_CANDID_PATH='/home/parimal/On-Chain-Social-Network/.dfx/local/canisters/internet_identity/internet_identity.did'
+DFX_NETWORK='playground'
+CANISTER_CANDID_PATH_SOCIAL_T7_BACKEND='/home/parimal/On-Chain-Social-Network/src/social_T7_backend/social_T7_backend.did'
+CANISTER_ID_SOCIAL_T7_FRONTEND='6zfvq-kiaaa-aaaab-qacra-cai'
+CANISTER_ID_SOCIAL_T7_BACKEND='3f6pv-baaaa-aaaab-qacoq-cai'
+CANISTER_ID='6zfvq-kiaaa-aaaab-qacra-cai'
+CANISTER_CANDID_PATH='/home/parimal/On-Chain-Social-Network/.dfx/playground/canisters/social_T7_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
